--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sphinx-rtd-theme = "^2.0.0"
 pytest = "^7.4.3"
 sphinx = "^7.2.6"
 sphinxcontrib-napoleon = "^0.7"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
