--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pandas = "^2.1.4"
 requests = "^2.31.0"
+IPython = "^7.28.0"
 
 [tool.poetry.dev-dependencies]
 
