--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,10 +1,18 @@
 # Required
 version: 2
 
-# Image to use
 build:
-  image: testing
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
+    # You can also specify other tool versions:
+    # nodejs: "20"
+    # rust: "1.70"
+    # golang: "1.20"
 
+# Build documentation in the "docs/" directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
 # Configuration
 python:
   version: 3.9
