--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.9"
 requests = "^2.31.0"
 pandas = "^1.4.2"
-
+myst-nb = "^1.0.0"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.group.dev.dependencies]
